# learning_evolve

./: CLAUDE.md  EXPERIMENT_PLAN.md  PROJECT_CONTEXT.md  README.md  notes
src/: .gitignore  README.md  pyproject.toml  run_icl.py
src/context/: __init__.py  lineage.py  ranking.py  selection.py
src/docs/strategies/: README.md  _concepts.md  best.md  best_diverse.md  best_jump.md  best_worst.md  biggest_jump.md  contrastive.md  informative.md  per_lineage.md  random.md  recent.md
src/envs/: __init__.py  ac_helpers.py  ac_inequalities.py  ac_prompt.py  base.py  circle_packing.py  codeblock.py  erdos_min_overlap.py  registry.py  toy_ee.py
src/generation/: __init__.py  vllm_client.py
src/icl/: __init__.py  config.py  loop.py
src/notebooks/: analyze_runs.ipynb
src/puct/: __init__.py  _json_io.py  sampler.py  state.py
src/results/: __init__.py  analysis.py  tracker.py
src/sandbox/: __init__.py  base_reward_evaluator.py  cpu_scheduler.py  ray_setup.py  sandbox_reward_evaluator.py
src/tests/: smoke_eval.py  smoke_icl.py  test_puct.py  test_strategies.py  test_tracker.py
