[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-evolve-icl"
version = "0.1.0"
description = "In-context-learning (ICL) discovery harness reusing TTT-Discover's PUCT + buffer + sandbox evaluators (tinker-free)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24",
    "ray[default]>=2.50",
    "scipy>=1.15.3",
    "cvxpy>=1.7.4",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
analysis = ["pandas>=2.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["puct*", "sandbox*", "envs*", "generation*", "context*", "icl*", "results*"]
